# storage/api-docs/api-docs.json
@@ -601,7 +601,12 @@
                     "404": {
                         "description": "Influencer not found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
